--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "@tailwindcss/vite": "^4.1.12",
     "gsap": "^3.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.8.0",
-    "tailwindcss": "^4.1.12"
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
